<resources>
    <string name="app_name">Weather Demo by slybeaver</string>

    <string name="no_internet_connection">Не удалось получить данные</string>
    <string name="retry_connection">ПОВТОРИТЬ</string>

    <string name="positive_weather">+%1$s˚</string>
    <string name="negative_weather">%1$s˚</string>
    <string name="at_morning">Утром</string>
    <string name="at_day">Днем</string>
    <string name="at_evening">Вечером</string>
    <string name="at_night">Ночью</string>
    <string name="current_location">Текущее местоположение</string>
    <string name="select_city">Выберите город</string>


    
</resources>
