<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow_white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            app:title="@string/app_name">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/snow_white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/snow_white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/snow_white"
                android:orientation="vertical"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:background="@color/cool_blue"
                    android:paddingTop="@dimen/def_padding"
                    android:layout_height="@dimen/main_weather_height">

                    <TextView
                        android:id="@+id/txtCityName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/big_text_size"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/snow_white"
                        android:clickable="true"
                        android:focusable="true"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat = "@drawable/ic_arrow_drop_down"
                        android:clickable="false"
                        android:layout_toRightOf="@+id/txtCityName"
                        android:layout_alignBottom="@+id/txtCityName"
                        android:layout_alignTop="@+id/txtCityName"
                        android:layout_toEndOf="@+id/txtCityName"
                        android:contentDescription="@string/select_city" />

                    <ImageView
                        android:id="@+id/imgWeather"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_alignTop="@+id/txtMainWeather"
                        android:layout_toRightOf="@+id/txtMainWeather"
                         />

                    <TextView
                        android:id="@+id/txtMainWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/snow_white"
                        android:textSize="@dimen/head_text_size"
                        android:textStyle="bold"
                        android:text="89"
                        android:layout_centerInParent="true"
                        />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/def_padding"
                    android:background="@drawable/default_bottom_delimiter"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/at_morning"
                        android:layout_weight="1"

                        />
                    <TextView
                        android:id="@+id/txtAtMorning"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/def_padding"
                    android:background="@drawable/default_bottom_delimiter"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/at_day"
                        android:layout_weight="1"

                        />
                    <TextView
                        android:id="@+id/txtAtDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/def_padding"
                    android:background="@drawable/default_bottom_delimiter"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/at_evening"
                        android:layout_weight="1"

                        />
                    <TextView
                        android:id="@+id/txtAtEvening"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:textStyle="bold"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/def_padding"
                    android:background="@drawable/default_bottom_delimiter"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/at_night"
                        android:layout_weight="1"

                        />
                    <TextView
                        android:id="@+id/txtAtNight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:textStyle="bold"
                        />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/mainProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>